# templates

./: .cmdline.py.swo  .cmdline.py.swp  .cmdline.sh.swp  .tempdir.sh.swp  Makefile  astylerc  backtrace-snippet.cpp  clyde-github.yaml  clyde.yaml  cmdline-clap.rs  cmdline-click-group.py  cmdline-click.py  cmdline-python2.py  cmdline-python3.py  cmdline.py  cmdline.rb  cmdline.sh  debug.h  dot-pre-commit-config.yaml  dumpmodel-snippet.cpp  kde4.py  mydebug.h  nanolog.py  plasma.qml  qt3.py  qt4.py  result.cpp  tempdir.sh  tracer-snippet.cpp  wide-string-debug-snippet.cpp
changie/: README.md
kde3/: CMakeLists.txt  main.cpp
kde4/: CMakeLists.txt  main.cpp  main.h
kde4-unit-test/: CMakeLists.txt  sortfiltermodeltest.cpp  sortfiltermodeltest.h
qt4/: CMakeLists-pkgconfig.txt  CMakeLists.txt  chrono-snippet.h  dbus-checkobjectpathexists-snippet.cpp  main.cpp  qsettings-snippet.cpp  readfile-snippet.cpp
qt5/: CMakeLists.txt  main.cpp  window.cpp  window.h
snippets/: .interpreter.py.swp  .logger.py.swp  .logging.py.swp  .rtassert.cpp.swp  .rtassert.h.swp  debug.qml  envvars.cpp  inlog.h  inlog.h.gch  interpreter.py  logger.py  logging.py  mtracer-var.cpp  mtracer.cpp  qtjsonvars.h  rt_assert  rtassert  rtassert.cpp  rtassert.h  tracer.cpp
snippets/cpp/: TempConfig.cpp  TempConfig.h  backtrace.h  bench.cpp  dumpmodel.cpp  inlog.h  mtracer.h  qtjsonvars.h  readfile.cpp  rt_assert.cpp  rt_assert.h  saveppm.cpp
snippets/cpp/demos/: CMakeLists.txt  backtrace.cpp  inlog.cpp  mtracer.cpp  qtjsonvars.cpp
snippets/java/: CSVWriter.java  android-getintproperty.java  libgdx-log-keys.java
snippets/js/: dumpobj.js  inherit.js
snippets/python/: .swp  ansi.py  backtrace.py  color.py  debug.py  htmllog.py  logger.py  nlog.py  print_string_with_indices.py  run.py  signal.py  signaltestcase.py  timeout.py  urlopen.py  verboselog.py
snippets/qml/: DebugText.qml
snippets/shell/: color.sh  tempdir.sh
templateqt/: CMakeLists.txt  template.cpp
